--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,10 +36,12 @@
 }
 
 .btn-green {
-    background-color: #2ecc71;
-    border-color: #2ecc71;
-    color: #FFFFFF;
-    padding: 10px 25px;
+    background-color: transparent;
+    border-color: #00a65a;
+    border-width: 1px;
+    color: #00a65a;
+    padding: 5px 25px;
+    margin-top: 20px;   
 }
 
 .btn-green:hover {
@@ -56,6 +58,63 @@
 }
 
 .btn-green-outline:hover {
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
+    color: #27ae60;
+}
+
+.btn-red {
+    background-color: transparent;
+    border-color: #f56954;
+    border-width: 1px;
+    color: #f56954;
+    padding: 5px 25px;
+    margin-top: 20px;    
+}
+
+.btn-red:hover {
+    background-color: #f56954;
+    border-color: #f56954;
+    color: #FFFFFF;
+}
+
+.btn-red-outline {
+    background-color: transparent;
+    border-color: #FFFFFF;
+    color: #FFFFFF;
+    padding: 10px 25px;
+}
+
+.btn-red-outline:hover {
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
+    color: #27ae60;
+}
+
+.btn-red {
+    background-color: transparent;
+    border-color: #f56954;
+    border-width: 1px;
+    color: #f56954;
+    padding: 5px 25px;
+    margin-top: 20px;
+    margin-left: 87%;
+}
+
+.btn-red:hover {
+    background-color: #f56954;
+    border-color: #f56954;
+    color: #FFFFFF;
+}
+
+.btn-red-outline {
+    background-color: transparent;
+    border-color: #FFFFFF;
+    color: #FFFFFF;
+    padding: 10px 25px;
+}
+
+.btn-red-outline:hover {
     background-color: #FFFFFF;
     border-color: #FFFFFF;
     color: #27ae60;
@@ -370,8 +429,8 @@
 }
 
 .modal-header {
-    background-color: #605ca8;
-    color: #FFFFFF;
+    background-color: #222d32;
+    color: #fff;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
@@ -627,25 +686,72 @@ footer{
     text-transform: none;
     padding-bottom: 10px;
 }
-/*
-input[type=file]{
 
-  display: inline;
-
-}
-
-#image_preview{
-
-  border: 1px solid black;
-
-  padding: 10px;
-
-}
-
-#image_preview img{
-
+.limiter {
   width: 100%;
+  margin: 0 auto;
+}
 
-  padding: 5px;
+.container-table100 {
+  width: 100%;
+  min-height: 100vh;
+  background: #c850c0;
+  background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
+  background: -o-linear-gradient(45deg, #4158d0, #c850c0);
+  background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
+  background: linear-gradient(45deg, #4158d0, #c850c0);
 
-}*/
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 33px 30px;
+}
+
+.wrap-table100 {
+  width: 1170px;
+}
+
+table {
+  border-spacing: 1;
+  border-collapse: collapse;
+  background: white;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+table * {
+  position: relative;
+}
+table td, table th {
+  padding-left: 8px;
+}
+table thead tr {
+  background: #222d32; 
+  color: #fff;
+
+}
+table tbody tr {
+  height: 50px;
+}
+table tbody tr:last-child {
+  border: 0;
+}
+table td, table th {
+  text-align: left;
+}
+table td.l, table th.l {
+  text-align: right;
+}
+table td.c, table th.c {
+  text-align: center;
+}
+table td.r, table th.r {
+  text-align: center;
+}
