--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto|bi);
+
 .print-logo {
     text-align: center;
     margin: 40px 0;
@@ -433,6 +435,7 @@
     color: #fff;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    font-family: 'Open Sans', Roboto|bi;
 }
 
 .preview-title {
