--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,14 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+ @import url(https://fonts.googleapis.com/css?family=Roboto|bi);
 
 html { width: 100%; height:100%; overflow:hidden; }
 
 body { 
-    background-image:url("/image/Bg-11.png");
+    background-image:url("http://128.199.161.172/ticket-bola/public/image/Bg-11.png");
     background-size: 100% 100%;
     margin-top: 120px;
     width: 100%;
     height:100%;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', Roboto|bi;
 }
 .login { 
     position: absolute;
