--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,7 +3,7 @@
 html { width: 100%; height:100%; overflow:hidden; }
 
 body { 
-    background-image:("http://128.199.161.172/ticket-bola/public/image/Bg-11.png");
+    background-image:url("/image/Bg-11.png");
     background-size: 100% 100%;
     margin-top: 120px;
     width: 100%;
