--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -757,8 +757,7 @@ table td.c, table th.c {
 }
 table td.r, table th.r {
   text-align: center;
-<<<<<<< HEAD
-=======
+
 }
 .gallery {
   width: 100%;
@@ -766,7 +765,7 @@ table td.r, table th.r {
   margin: 0 auto;
   padding: 2px;
   background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  box-shadow: 0 2px 8px rgba(0,0,0,.3);
 }
 
 .gallery > div {
@@ -776,18 +775,19 @@ table td.r, table th.r {
 }
 
 div.gallery {
-    border: 1px solid #ccc;
     margin-top: 10%;
     margin-left: -20px;
 }
 
-div.gallery:hover {
+/*div.gallery:hover {
     border: 1px solid #777;
-}
+}*/
 
 div.gallery img {
     width: 100%;
     height: auto;
+    border: 5px solid #fff;
+    padding: 10px;
 }
 
 div.desc {
@@ -797,7 +797,7 @@ div.desc {
     padding: 2px;
     width: 100%;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0,0,0,.3);
+    box-shadow: 0 2px 3px rgba(0,0,0,.3);
 }
 
 * {
@@ -827,5 +827,4 @@ div.desc {
     content: "";
     display: table;
     clear: both;
->>>>>>> ee5d429958815d3b7a5e3515ccccc6889cd66b5a
 }
