--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,18 +1,17 @@
- @import url(https://fonts.googleapis.com/css?family=Roboto|bi);
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
 
 html { width: 100%; height:100%; overflow:hidden; }
 
 body { 
 
     background-image:url("http://128.199.161.172/ticket-bola/public/image/Bg-11.png");
-
+    font-family: 'Roboto', sans-serif;
     background-size: 100% 100%;
     margin-top: 120px;
     width: 100%;
     height:100%;
-    font-family: 'Open Sans', Roboto|bi;
 }
-.login { 
+/*.login { 
     position: absolute;
     top: 50%;
     left: 50%;
@@ -21,7 +20,28 @@ body {
     height:300px;
 }
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
-
+*/
+.page-login {
+  /*margin: 80px auto;*/
+}
+.page-login__img {
+  width: 180px;
+  margin: 0 auto 20px;
+}
+.page-login__img img {
+  width: inherit;
+}
+.page-login .form-control {
+  border-radius: 0;
+  height: 45px;
+  font-size: 13px;
+  letter-spacing: .5px;
+  color: #424242;
+}
+.page-login .form-control:focus {
+  border: 1px solid #49AF06;
+  box-shadow: none;
+}
 input { 
     /*box-sizing: border-box;*/
     border: none;
